--- a/gwiazdy.css
+++ b/gwiazdy.css
@@ -1,7 +1,7 @@
 body {
     height: 100%;
     width: 100%;
-    font-family: Garamond;
+    font-family: arial;
     margin: 0;
     padding: 0;
 }
